--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1",
-    "ws": "^8.18.2"
+    "typescript-eslint": "^8.34.1"
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
@@ -56,6 +55,7 @@
     "@fastify/websocket": "^11.1.0",
     "fastify": "^5.4.0",
     "nanoid": "^5.1.5",
+    "ws": "^8.18.2",
     "zod": "^3.25.67"
   }
 }
